WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213351
[ Catalina Debug WK2 ] fast/events/platform-wheelevent-in-scrolling-div.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=213351
Summary
[ Catalina Debug WK2 ] fast/events/platform-wheelevent-in-scrolling-div.html ...
Karl Rackler
Reported
2020-06-18 13:35:42 PDT
fast/events/platform-wheelevent-in-scrolling-div.html We are seeing this test failing on Catalina WK2. Infrequent failure. We are seeing once every one to two days. History:
https://results.webkit.org/?suite=layout-tests&test=fast%2Fevents%2Fplatform-wheelevent-in-scrolling-div.html
Diff: --- /Volumes/Data/slave/catalina-debug-tests-wk2/build/layout-test-results/fast/events/platform-wheelevent-in-scrolling-div-expected.txt +++ /Volumes/Data/slave/catalina-debug-tests-wk2/build/layout-test-results/fast/events/platform-wheelevent-in-scrolling-div-actual.txt @@ -1,6 +1,3 @@ -PASS event.wheelDeltaY is window.expectedScrollTop*-120 -PASS event.wheelDeltaX is window.expectedScrollLeft*-120 -PASS event.wheelDelta is window.expectedScrollTop*-120 -PASS div.scrollTop is window.expectedScrollTop*window.pixelsPerWheelTick -PASS div.scrollLeft is window.expectedScrollLeft*window.pixelsPerWheelTick +FAIL div.scrollTop should be 200. Was 0. +FAIL div.scrollLeft should be 120. Was 0.
Attachments
Patch
(1.47 KB, patch)
2020-06-18 16:24 PDT
,
Karl Rackler
no flags
Details
Formatted Diff
Diff
Patch
(5.98 KB, patch)
2020-06-21 17:51 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
For landing
(5.93 KB, patch)
2020-06-21 18:07 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(10.69 KB, patch)
2020-06-22 21:18 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(10.88 KB, patch)
2020-06-22 21:23 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-06-18 13:36:51 PDT
<
rdar://problem/64502429
>
Karl Rackler
Comment 2
2020-06-18 15:54:48 PDT
Unable to reproduce this failure locally using run-webkit-test.
Karl Rackler
Comment 3
2020-06-18 16:24:20 PDT
Created
attachment 402248
[details]
Patch
Truitt Savell
Comment 4
2020-06-18 16:28:10 PDT
Comment on
attachment 402248
[details]
Patch Clearing flags on attachment: 402248 Committed
r263244
: <
https://trac.webkit.org/changeset/263244
>
Truitt Savell
Comment 5
2020-06-18 16:28:12 PDT
All reviewed patches have been landed. Closing bug.
Truitt Savell
Comment 6
2020-06-18 16:29:05 PDT
Reopening after landing test expectations
Simon Fraser (smfr)
Comment 7
2020-06-21 17:51:34 PDT
Created
attachment 402434
[details]
Patch
Wenson Hsieh
Comment 8
2020-06-21 17:53:23 PDT
Comment on
attachment 402434
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=402434&action=review
> LayoutTests/fast/events/platform-wheelevent-in-scrolling-div.html:28 > + eventSender.callAfterScrollingCompletes(() => { > + checkOffsets(); > + });
Nit - I think this would read better as `eventSender.callAfterScrollingCompletes(checkOffsets);`
Simon Fraser (smfr)
Comment 9
2020-06-21 18:07:10 PDT
Created
attachment 402435
[details]
For landing
Simon Fraser (smfr)
Comment 10
2020-06-21 20:37:05 PDT
EWS still shows a timeout :(
Simon Fraser (smfr)
Comment 11
2020-06-22 21:18:49 PDT
Created
attachment 402533
[details]
Patch
Simon Fraser (smfr)
Comment 12
2020-06-22 21:23:12 PDT
Created
attachment 402534
[details]
Patch
Tim Horton
Comment 13
2020-06-22 21:43:34 PDT
Comment on
attachment 402534
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=402534&action=review
> Tools/ChangeLog:9 > + The variadic CGEventCreateScrollWheelEvent() seems to have an issue that causes the resulting event
Seems mysterious and worth a radar??
Alexey Proskuryakov
Comment 14
2020-06-22 22:05:13 PDT
Very nice!
EWS
Comment 15
2020-06-23 08:14:16 PDT
Committed
r263396
: <
https://trac.webkit.org/changeset/263396
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402534
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug