[ Catalina Debug WK2 ] fast/events/platform-wheelevent-in-scrolling-div.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=213351 <rdar://problem/64502429>

Reviewed by Tim Horton.

Tools:

The variadic CGEventCreateScrollWheelEvent() seems to have an issue that causes the resulting event
to rarely put the x value into the deltaY. Change to the non-variadic CGEventCreateScrollWheelEvent2()
to avoid this.

* DumpRenderTree/mac/EventSendingController.mm:
(-[EventSendingController mouseScrollByX:andY:continuously:]):
(-[EventSendingController mouseScrollByX:andY:withWheel:andMomentumPhases:]):
* WebKitTestRunner/mac/EventSenderProxy.mm:
(WTR::EventSenderProxy::mouseScrollBy):
(WTR::EventSenderProxy::mouseScrollByWithWheelAndMomentumPhases):

LayoutTests:

Fix the test to use eventSender.monitorWheelEvents(). Also remove an initial 100ms timeout and
some ugly uses of "window.", and make it a proper js-test-pre/js-test-post test.

* fast/events/platform-wheelevent-in-scrolling-div-expected.txt:
* fast/events/platform-wheelevent-in-scrolling-div.html:
* platform/mac-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/226302@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263396 268f45cc-cd09-0410-ab3c-d52691b4dbfc